src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,400;0,700;1,400;1,700&display=swap');

:root {
  /* color palette */
  --primary: #fb7413;
  --white: hsl(0, 0%, 100%);
  --grey-light: hsl(217, 12%, 63%);
  --grey-medium: hsl(216, 12%, 54%);
  --blue-dark: hsl(213, 19%, 18%);
  --background: #141519;
  --icon-bg: #2e3c52;
  /* typography */
  --font: 'Overpass', sans-serif;
  --font-size-base: 15px;
}

* {
  box-sizing: border-box;
}
*::after,
*::before {
  box-sizing: border-box;
}
html,
body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  width: 100vw;
  background-color: var(--background);
  color: var(--white);
  font-size: var(--font-size-base);
  font-family: var(--font);
}

h1,
p {
  margin: 0;
}

ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

p {
  opacity: 0.6;
  line-height: 1.4;
}

main {
  height: 85vh;
  display: flex;
  align-items: center;
}

.card-container {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding: 28px 24px;
  border-radius: 24px;
  min-height: 380px;
  max-width: 400px;
  margin: auto;
  background: hsla(215, 27%, 12%, 1);
  background: linear-gradient(0deg, hsla(215, 27%, 12%, 1) 0%, #232e3e 100%);
}

#star-icon {
  width: 40px;
  height: 40px;
  padding: 12px;
  margin-bottom: 4px;
  background-color: #2e3c52;
  border-radius: 50%;
}

#thank-you-icon {
  display: none;
  margin: 20px auto 16px;
  width: 150px;
}

.card-content-container {
  margin-top: 8px;
}

#main-heading {
  margin-bottom: 12px;
  font-size: 24px;
}

#result-badge {
  height: 32px;
  display: flex;
  width: 204px;
  padding: 6px 12px;
  margin: auto;
  margin-top: -8px;
  margin-bottom: 24px;
  border-radius: 54px;
  justify-content: center;
  align-items: center;
  background-color: var(--blue-dark);
  opacity: 0.7;
  color: var(--primary);
  letter-spacing: 0.5px;
}

.thank-you-h1 {
  text-align: center;
  margin-bottom: 16px;
  font-size: 24px;
}

.card-text {
  margin-bottom: 8px;
  text-align: center;
  max-width: 95%;
}

.options-list-container {
  margin: 26px 0 8px;
}

.review-options-list {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.review-options-list label {
  color: rgba(255, 255, 255, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  height: 48px;
  padding-top: 4px;
  background-color: var(--blue-dark);
  opacity: 0.9;
  border-radius: 50%;
  cursor: pointer;
  transition: all 0.1s linear;
}

.review-options-list > label:hover {
  background-color: var(--grey-light);
  color: var(--white);
  font-weight: 700;
}

input[type='radio'] {
  appearance: none;
}

label {
  display: flex;
  justify-content: center;
  padding-top: 12px;
  height: 40px;
  width: 40px;
  background-color: var(--grey-medium);
  border-radius: 50%;
  color: var(--white);
  opacity: 0.8;
  transition: 0.5s;
  cursor: pointer;
}

label > span {
  align-self: center;
  justify-self: center;
}

.orange {
  /* hate to use !important...  */
  background-color: var(--primary) !important;
}

button {
  height: 44px;
  width: 90%;
  display: block;
  margin: 28px auto 0;
  border-radius: 32px;
  border: none;
  background-color: var(--primary);
  color: var(--white);
  text-transform: uppercase;
  font-size: 0.9rem;
  font-weight: 600;
  letter-spacing: 1.75px;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}

button:hover {
  background-color: var(--white);
  color: var(--primary);
}

footer {
  height: 15vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

/*
CSS tricks FTW
https://css-tricks.com/css-hover-effects-background-masks-3d/
*/
footer a {
  text-decoration: none;
  color: var(--grey-light);
  --b: 1.5px; /* the thickness of the line */
  --c: var(--grey-light);
  padding-block: var(--b);
  background: linear-gradient(var(--c) 50%, #000 0) 0%
      calc(100% - var(--_p, 0%)) / 100% 200%,
    linear-gradient(var(--c) 0 0) 0% var(--_p, 0%) / var(--_p, 0%) var(--b)
      no-repeat;
  -webkit-background-clip: text, padding-box;
  background-clip: text, padding-box;
  transition: 0.25s var(--_s, 0s) linear,
    background-size 0.25s calc(0.25s - var(--_s, 0s));
}

footer a:hover {
  --_p: 100%;
  --_s: 0.3s;
}

